--- a/conf/wrtac_ip4.conf
+++ b/conf/wrtac_ip4.conf
@@ -49,7 +49,10 @@ CONFIG_PACKAGE_kmod-ata-core=y
 CONFIG_PACKAGE_kmod-ata-marvell-sata=y
 CONFIG_PACKAGE_kmod-crypto-crc32c=y
 CONFIG_PACKAGE_kmod-fs-ext4=y
+CONFIG_PACKAGE_kmod-ipt-raw=y
 # CONFIG_PACKAGE_kmod-nf-ipt6 is not set
+CONFIG_PACKAGE_kmod-nfnetlink=y
+CONFIG_PACKAGE_kmod-nfnetlink-log=y
 # CONFIG_PACKAGE_kmod-ppp is not set
 CONFIG_PACKAGE_kmod-scsi-core=y
 CONFIG_PACKAGE_kmod-tun=y
@@ -68,6 +71,7 @@ CONFIG_PACKAGE_libfdisk=y
 CONFIG_PACKAGE_libffmpeg-audio-dec=y
 CONFIG_PACKAGE_libflac=y
 CONFIG_PACKAGE_libid3tag=y
+# CONFIG_PACKAGE_libip6tc is not set
 CONFIG_PACKAGE_libiwinfo-lua=y
 CONFIG_PACKAGE_libjpeg=y
 CONFIG_PACKAGE_liblua=y
@@ -79,6 +83,7 @@ CONFIG_PACKAGE_libncurses=y
 CONFIG_PACKAGE_libogg=y
 CONFIG_PACKAGE_libopenssl=y
 CONFIG_PACKAGE_libpcap=y
+CONFIG_PACKAGE_libpcre=y
 CONFIG_PACKAGE_libpopt=y
 CONFIG_PACKAGE_librt=y
 CONFIG_PACKAGE_libsmartcols=y
@@ -151,6 +156,7 @@ CONFIG_PACKAGE_unbound-anchor=y
 CONFIG_PACKAGE_unbound-control=y
 CONFIG_PACKAGE_unbound-host=y
 # CONFIG_PACKAGE_usign is not set
+CONFIG_PACKAGE_wget=y
 CONFIG_PACKAGE_zlib=y
 CONFIG_PERL_NOCOMMENT=y
 CONFIG_PERL_THREADS=y
@@ -159,4 +165,3 @@ CONFIG_RSYNC_zlib=y
 CONFIG_SQLITE_FTS3=y
 CONFIG_SQLITE_RTREE=y
 CONFIG_PACKAGE_kmod-lib-crc-ccitt=y
-CONFIG_PACKAGE_libip6tc=y
