--- a/conf/wrtac_ip4.conf
+++ b/conf/wrtac_ip4.conf
@@ -30,6 +30,8 @@ CONFIG_OPENVPN_openssl_ENABLE_SERVER=y
 CONFIG_OPENVPN_openssl_ENABLE_SMALL=y
 CONFIG_OPENVPN_openssl_ENABLE_SOCKS=y
 CONFIG_PACKAGE_SAMBA_MAX_DEBUG_LEVEL=-1
+CONFIG_PACKAGE_bind-dig=y
+CONFIG_PACKAGE_bind-libs=y
 CONFIG_PACKAGE_blkid=y
 CONFIG_PACKAGE_block-mount=y
 CONFIG_PACKAGE_ca-certificates=y
@@ -62,6 +64,7 @@ CONFIG_PACKAGE_kmod-usb-storage-extras=y
 CONFIG_PACKAGE_kmod-usb-storage-uas=y
 CONFIG_PACKAGE_kmod-usb2=y
 CONFIG_PACKAGE_kmod-usb3=y
+CONFIG_PACKAGE_libatomic=y
 CONFIG_PACKAGE_libblkid=y
 CONFIG_PACKAGE_libbz2=y
 CONFIG_PACKAGE_libcurl=y
@@ -78,8 +81,12 @@ CONFIG_PACKAGE_liblua=y
 CONFIG_PACKAGE_liblucihttp=y
 CONFIG_PACKAGE_liblucihttp-lua=y
 CONFIG_PACKAGE_liblzo=y
+CONFIG_PACKAGE_libmariadbclient=y
 CONFIG_PACKAGE_libmbedtls=y
+CONFIG_PACKAGE_libmnl=y
 CONFIG_PACKAGE_libncurses=y
+CONFIG_PACKAGE_libnetfilter-log=y
+CONFIG_PACKAGE_libnfnetlink=y
 CONFIG_PACKAGE_libogg=y
 CONFIG_PACKAGE_libopenssl=y
 CONFIG_PACKAGE_libpcap=y
@@ -88,6 +95,7 @@ CONFIG_PACKAGE_libpopt=y
 CONFIG_PACKAGE_librt=y
 CONFIG_PACKAGE_libsmartcols=y
 CONFIG_PACKAGE_libsqlite3=y
+CONFIG_PACKAGE_libstdcpp=y
 CONFIG_PACKAGE_libubus-lua=y
 CONFIG_PACKAGE_libunbound=y
 CONFIG_PACKAGE_libuuid=y
@@ -151,6 +159,9 @@ CONFIG_PACKAGE_samba36-server=y
 CONFIG_PACKAGE_terminfo=y
 CONFIG_PACKAGE_uhttpd=y
 CONFIG_PACKAGE_uhttpd-mod-ubus=y
+CONFIG_PACKAGE_ulogd=y
+CONFIG_PACKAGE_ulogd-mod-mysql=y
+CONFIG_PACKAGE_ulogd-mod-nflog=y
 CONFIG_PACKAGE_unbound=y
 CONFIG_PACKAGE_unbound-anchor=y
 CONFIG_PACKAGE_unbound-control=y
