--- a/conf/wrtac_ip4.conf
+++ b/conf/wrtac_ip4.conf
@@ -34,6 +34,7 @@ CONFIG_PACKAGE_bind-dig=y
 CONFIG_PACKAGE_bind-libs=y
 CONFIG_PACKAGE_blkid=y
 CONFIG_PACKAGE_block-mount=y
+CONFIG_PACKAGE_ca-bundle=y
 CONFIG_PACKAGE_ca-certificates=y
 CONFIG_PACKAGE_coreutils=y
 CONFIG_PACKAGE_coreutils-base64=y
