--- a/conf/v18/wrtac_ip4.conf
+++ b/conf/v18/wrtac_ip4.conf
@@ -4,6 +4,8 @@ CONFIG_TARGET_MULTI_PROFILE=y
 CONFIG_TARGET_DEVICE_mvebu_cortexa9_DEVICE_linksys-wrt1200ac=y
 CONFIG_TARGET_DEVICE_mvebu_cortexa9_DEVICE_linksys-wrt1900acs=y
 CONFIG_TARGET_DEVICE_mvebu_cortexa9_DEVICE_linksys-wrt3200acm=y
+CONFIG_DROPBEAR_ECC=y
+CONFIG_DROPBEAR_ZLIB=y
 # CONFIG_IPV6 is not set
 # CONFIG_KERNEL_IPV6 is not set
 CONFIG_LIBCURL_COOKIES=y
@@ -47,11 +49,14 @@ CONFIG_PACKAGE_gzip=y
 CONFIG_PACKAGE_hdparm=y
 CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_iftop=y
+CONFIG_PACKAGE_igmpproxy=y
+CONFIG_PACKAGE_iptables-mod-nflog=y
 CONFIG_PACKAGE_isc-dhcp-server-ipv4=y
 CONFIG_PACKAGE_kmod-ata-core=y
 CONFIG_PACKAGE_kmod-ata-marvell-sata=y
 CONFIG_PACKAGE_kmod-crypto-crc32c=y
 CONFIG_PACKAGE_kmod-fs-ext4=y
+CONFIG_PACKAGE_kmod-ipt-nflog=y
 CONFIG_PACKAGE_kmod-ipt-raw=y
 # CONFIG_PACKAGE_kmod-nf-ipt6 is not set
 CONFIG_PACKAGE_kmod-nfnetlink=y
@@ -117,7 +122,6 @@ CONFIG_PACKAGE_luci-proto-ppp=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
 CONFIG_PACKAGE_minidlna=y
 CONFIG_PACKAGE_nano=y
-# CONFIG_PACKAGE_odhcpd-ipv6only is not set
 CONFIG_PACKAGE_openvpn-openssl=y
 # CONFIG_PACKAGE_openwrt-keyring is not set
 CONFIG_PACKAGE_perl=y
@@ -161,8 +165,10 @@ CONFIG_PACKAGE_terminfo=y
 CONFIG_PACKAGE_uhttpd=y
 CONFIG_PACKAGE_uhttpd-mod-ubus=y
 CONFIG_PACKAGE_ulogd=y
+CONFIG_PACKAGE_ulogd-mod-extra=y
 CONFIG_PACKAGE_ulogd-mod-mysql=y
 CONFIG_PACKAGE_ulogd-mod-nflog=y
+CONFIG_PACKAGE_ulogd-mod-syslog=y
 CONFIG_PACKAGE_unbound=y
 CONFIG_PACKAGE_unbound-anchor=y
 CONFIG_PACKAGE_unbound-control=y
