--- a/conf/v19/wrtac.conf
+++ b/conf/v19/wrtac.conf
@@ -1,12 +1,9 @@
 CONFIG_TARGET_mvebu=y
 CONFIG_TARGET_mvebu_cortexa9=y
-CONFIG_TARGET_MULTI_PROFILE=y
-CONFIG_TARGET_DEVICE_mvebu_cortexa9_DEVICE_linksys-wrt1200ac=y
-CONFIG_TARGET_DEVICE_mvebu_cortexa9_DEVICE_linksys-wrt1900acs=y
+CONFIG_TARGET_mvebu_cortexa9_DEVICE_linksys_wrt1900acs=y
 CONFIG_DROPBEAR_ECC=y
+CONFIG_DROPBEAR_ECC_FULL=y
 CONFIG_DROPBEAR_ZLIB=y
-CONFIG_IPV6=y
-CONFIG_KERNEL_IPV6=y
 CONFIG_LIBCURL_COOKIES=y
 CONFIG_LIBCURL_FILE=y
 CONFIG_LIBCURL_FTP=y
@@ -14,14 +11,19 @@ CONFIG_LIBCURL_HTTP=y
 CONFIG_LIBCURL_MBEDTLS=y
 CONFIG_LIBCURL_NO_SMB="!"
 CONFIG_LIBCURL_PROXY=y
+CONFIG_OPENSSL_ENGINE=y
+CONFIG_OPENSSL_PREFER_CHACHA_OVER_GCM=y
+CONFIG_OPENSSL_WITH_ASM=y
+CONFIG_OPENSSL_WITH_CHACHA_POLY1305=y
+CONFIG_OPENSSL_WITH_CMS=y
 CONFIG_OPENSSL_WITH_DEPRECATED=y
-CONFIG_OPENSSL_WITH_EC=y
+CONFIG_OPENSSL_WITH_ERROR_MESSAGES=y
 CONFIG_OPENSSL_WITH_NPN=y
 CONFIG_OPENSSL_WITH_PSK=y
 CONFIG_OPENSSL_WITH_SRP=y
+CONFIG_OPENSSL_WITH_TLS13=y
 CONFIG_OPENVPN_openssl_ENABLE_DEF_AUTH=y
 CONFIG_OPENVPN_openssl_ENABLE_FRAGMENT=y
-CONFIG_OPENVPN_openssl_ENABLE_HTTP=y
 CONFIG_OPENVPN_openssl_ENABLE_LZ4=y
 CONFIG_OPENVPN_openssl_ENABLE_LZO=y
 CONFIG_OPENVPN_openssl_ENABLE_MULTIHOME=y
@@ -29,14 +31,13 @@ CONFIG_OPENVPN_openssl_ENABLE_PF=y
 CONFIG_OPENVPN_openssl_ENABLE_PORT_SHARE=y
 CONFIG_OPENVPN_openssl_ENABLE_SERVER=y
 CONFIG_OPENVPN_openssl_ENABLE_SMALL=y
-CONFIG_OPENVPN_openssl_ENABLE_SOCKS=y
-CONFIG_PACKAGE_SAMBA_MAX_DEBUG_LEVEL=-1
 CONFIG_PACKAGE_bind-dig=y
 CONFIG_PACKAGE_bind-libs=y
 CONFIG_PACKAGE_blkid=y
 CONFIG_PACKAGE_block-mount=y
 CONFIG_PACKAGE_ca-bundle=y
 CONFIG_PACKAGE_ca-certificates=y
+CONFIG_PACKAGE_cgi-io=y
 CONFIG_PACKAGE_coreutils=y
 CONFIG_PACKAGE_coreutils-base64=y
 CONFIG_PACKAGE_coreutils-stat=y
@@ -54,15 +55,17 @@ CONFIG_PACKAGE_isc-dhcp-server-ipv4=y
 CONFIG_PACKAGE_kmod-ata-core=y
 CONFIG_PACKAGE_kmod-ata-marvell-sata=y
 CONFIG_PACKAGE_kmod-crypto-crc32c=y
+CONFIG_PACKAGE_kmod-crypto-hash=y
 CONFIG_PACKAGE_kmod-fs-ext4=y
 CONFIG_PACKAGE_kmod-ipt-nflog=y
 CONFIG_PACKAGE_kmod-ipt-raw=y
-CONFIG_PACKAGE_kmod-nf-ipt6=y
+CONFIG_PACKAGE_kmod-lib-crc16=y
 CONFIG_PACKAGE_kmod-nfnetlink=y
 CONFIG_PACKAGE_kmod-nfnetlink-log=y
-# CONFIG_PACKAGE_kmod-ppp is not set
+CONFIG_PACKAGE_kmod-nls-base=y
 CONFIG_PACKAGE_kmod-scsi-core=y
 CONFIG_PACKAGE_kmod-tun=y
+CONFIG_PACKAGE_kmod-usb-core=y
 CONFIG_PACKAGE_kmod-usb-ehci=y
 CONFIG_PACKAGE_kmod-usb-storage=y
 CONFIG_PACKAGE_kmod-usb-storage-extras=y
@@ -79,14 +82,13 @@ CONFIG_PACKAGE_libfdisk=y
 CONFIG_PACKAGE_libffmpeg-audio-dec=y
 CONFIG_PACKAGE_libflac=y
 CONFIG_PACKAGE_libid3tag=y
-CONFIG_PACKAGE_libip6tc=y
 CONFIG_PACKAGE_libiwinfo-lua=y
 CONFIG_PACKAGE_libjpeg=y
 CONFIG_PACKAGE_liblua=y
 CONFIG_PACKAGE_liblucihttp=y
 CONFIG_PACKAGE_liblucihttp-lua=y
 CONFIG_PACKAGE_liblzo=y
-CONFIG_PACKAGE_libmariadbclient=y
+CONFIG_PACKAGE_libmariadb=y
 CONFIG_PACKAGE_libmbedtls=y
 CONFIG_PACKAGE_libmnl=y
 CONFIG_PACKAGE_libncurses=y
@@ -102,23 +104,30 @@ CONFIG_PACKAGE_libsmartcols=y
 CONFIG_PACKAGE_libsqlite3=y
 CONFIG_PACKAGE_libstdcpp=y
 CONFIG_PACKAGE_libubus-lua=y
-CONFIG_PACKAGE_libunbound=y
+CONFIG_PACKAGE_libunbound-light=y
 CONFIG_PACKAGE_libuuid=y
 CONFIG_PACKAGE_libvorbis=y
 CONFIG_PACKAGE_lua=y
+CONFIG_PACKAGE_luasocket=y
 CONFIG_PACKAGE_luci=y
-# CONFIG_PACKAGE_luci-app-firewall is not set
+CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-minidlna=y
 CONFIG_PACKAGE_luci-app-openvpn=y
-# CONFIG_PACKAGE_luci-app-samba is not set
+CONFIG_PACKAGE_luci-app-opkg=y
 CONFIG_PACKAGE_luci-app-unbound=y
 CONFIG_PACKAGE_luci-base=y
+CONFIG_PACKAGE_luci-compat=y
 CONFIG_PACKAGE_luci-lib-ip=y
 CONFIG_PACKAGE_luci-lib-jsonc=y
 CONFIG_PACKAGE_luci-lib-nixio=y
 CONFIG_PACKAGE_luci-mod-admin-full=y
-# CONFIG_PACKAGE_luci-proto-ppp is not set
+CONFIG_PACKAGE_luci-mod-network=y
+CONFIG_PACKAGE_luci-mod-status=y
+CONFIG_PACKAGE_luci-mod-system=y
+CONFIG_PACKAGE_luci-proto-ipv6=y
+CONFIG_PACKAGE_luci-proto-ppp=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
+CONFIG_PACKAGE_mariadb-common=y
 CONFIG_PACKAGE_minidlna=y
 CONFIG_PACKAGE_nano=y
 CONFIG_PACKAGE_openvpn-openssl=y
@@ -155,12 +164,20 @@ CONFIG_PACKAGE_perlbase-tie=y
 CONFIG_PACKAGE_perlbase-unicore=y
 CONFIG_PACKAGE_perlbase-utf8=y
 CONFIG_PACKAGE_perlbase-xsloader=y
-# CONFIG_PACKAGE_ppp is not set
+CONFIG_PACKAGE_prometheus-node-exporter-lua=y
+CONFIG_PACKAGE_prometheus-node-exporter-lua-nat_traffic=y
+CONFIG_PACKAGE_prometheus-node-exporter-lua-netstat=y
+CONFIG_PACKAGE_prometheus-node-exporter-lua-openwrt=y
+CONFIG_PACKAGE_prometheus-node-exporter-lua-wifi=y
+CONFIG_PACKAGE_prometheus-node-exporter-lua-wifi_stations=y
 CONFIG_PACKAGE_rpcd=y
+CONFIG_PACKAGE_rpcd-mod-file=y
+CONFIG_PACKAGE_rpcd-mod-iwinfo=y
+CONFIG_PACKAGE_rpcd-mod-luci=y
 CONFIG_PACKAGE_rpcd-mod-rrdns=y
 CONFIG_PACKAGE_rsync=y
-CONFIG_PACKAGE_samba36-server=y
 CONFIG_PACKAGE_terminfo=y
+CONFIG_PACKAGE_tree=y
 CONFIG_PACKAGE_uhttpd=y
 CONFIG_PACKAGE_uhttpd-mod-ubus=y
 CONFIG_PACKAGE_ulogd=y
@@ -168,17 +185,23 @@ CONFIG_PACKAGE_ulogd-mod-extra=y
 CONFIG_PACKAGE_ulogd-mod-mysql=y
 CONFIG_PACKAGE_ulogd-mod-nflog=y
 CONFIG_PACKAGE_ulogd-mod-syslog=y
-CONFIG_PACKAGE_unbound=y
 CONFIG_PACKAGE_unbound-anchor=y
 CONFIG_PACKAGE_unbound-control=y
+CONFIG_PACKAGE_unbound-daemon=y
 CONFIG_PACKAGE_unbound-host=y
 # CONFIG_PACKAGE_usign is not set
 CONFIG_PACKAGE_wget=y
+# CONFIG_PACKAGE_wpad-basic is not set
+CONFIG_PACKAGE_wpad-openssl=y
 CONFIG_PACKAGE_zlib=y
 CONFIG_PERL_NOCOMMENT=y
 CONFIG_PERL_THREADS=y
 CONFIG_RSYNC_zlib=y
+# CONFIG_SIGNATURE_CHECK is not set
 # CONFIG_SIGNED_PACKAGES is not set
-CONFIG_SQLITE_FTS3=y
-CONFIG_SQLITE_RTREE=y
-CONFIG_PACKAGE_kmod-lib-crc-ccitt=y
+CONFIG_SQLITE3_DYNAMIC_EXTENSIONS=y
+CONFIG_SQLITE3_FTS3=y
+CONFIG_SQLITE3_FTS4=y
+CONFIG_SQLITE3_FTS5=y
+CONFIG_SQLITE3_JSON1=y
+CONFIG_SQLITE3_RTREE=y
