--- a/conf/v19/wrtac.conf
+++ b/conf/v19/wrtac.conf
@@ -106,6 +106,7 @@ CONFIG_PACKAGE_libstdcpp=y
 CONFIG_PACKAGE_libubus-lua=y
 CONFIG_PACKAGE_libunbound-light=y
 CONFIG_PACKAGE_libuuid=y
+CONFIG_PACKAGE_libuv=y
 CONFIG_PACKAGE_libvorbis=y
 CONFIG_PACKAGE_lua=y
 CONFIG_PACKAGE_luasocket=y
