--- a/conf/v19/wrtac.conf
+++ b/conf/v19/wrtac.conf
@@ -50,6 +50,7 @@ CONFIG_PACKAGE_hdparm=y
 CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_iftop=y
 CONFIG_PACKAGE_igmpproxy=y
+CONFIG_PACKAGE_ip-tiny=y
 CONFIG_PACKAGE_iptables-mod-nflog=y
 CONFIG_PACKAGE_isc-dhcp-server-ipv4=y
 CONFIG_PACKAGE_kmod-ata-core=y
@@ -65,6 +66,8 @@ CONFIG_PACKAGE_kmod-nfnetlink-log=y
 CONFIG_PACKAGE_kmod-nls-base=y
 CONFIG_PACKAGE_kmod-scsi-core=y
 CONFIG_PACKAGE_kmod-tun=y
+CONFIG_PACKAGE_kmod-udptunnel4=y
+CONFIG_PACKAGE_kmod-udptunnel6=y
 CONFIG_PACKAGE_kmod-usb-core=y
 CONFIG_PACKAGE_kmod-usb-ehci=y
 CONFIG_PACKAGE_kmod-usb-storage=y
@@ -72,6 +75,7 @@ CONFIG_PACKAGE_kmod-usb-storage-extras=y
 CONFIG_PACKAGE_kmod-usb-storage-uas=y
 CONFIG_PACKAGE_kmod-usb2=y
 CONFIG_PACKAGE_kmod-usb3=y
+CONFIG_PACKAGE_kmod-wireguard=y
 CONFIG_PACKAGE_libatomic=y
 CONFIG_PACKAGE_libblkid=y
 CONFIG_PACKAGE_libbz2=y
@@ -116,6 +120,7 @@ CONFIG_PACKAGE_luci-app-minidlna=y
 CONFIG_PACKAGE_luci-app-openvpn=y
 CONFIG_PACKAGE_luci-app-opkg=y
 CONFIG_PACKAGE_luci-app-unbound=y
+CONFIG_PACKAGE_luci-app-wireguard=y
 CONFIG_PACKAGE_luci-base=y
 CONFIG_PACKAGE_luci-compat=y
 CONFIG_PACKAGE_luci-lib-ip=y
@@ -127,6 +132,7 @@ CONFIG_PACKAGE_luci-mod-status=y
 CONFIG_PACKAGE_luci-mod-system=y
 CONFIG_PACKAGE_luci-proto-ipv6=y
 CONFIG_PACKAGE_luci-proto-ppp=y
+CONFIG_PACKAGE_luci-proto-wireguard=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
 CONFIG_PACKAGE_mariadb-common=y
 CONFIG_PACKAGE_minidlna=y
@@ -192,6 +198,8 @@ CONFIG_PACKAGE_unbound-daemon=y
 CONFIG_PACKAGE_unbound-host=y
 # CONFIG_PACKAGE_usign is not set
 CONFIG_PACKAGE_wget=y
+CONFIG_PACKAGE_wireguard=y
+CONFIG_PACKAGE_wireguard-tools=y
 # CONFIG_PACKAGE_wpad-basic is not set
 CONFIG_PACKAGE_wpad-openssl=y
 CONFIG_PACKAGE_zlib=y
