--- a/conf/v21/edgerouter-x-sfp.conf
+++ b/conf/v21/edgerouter-x-sfp.conf
@@ -14,6 +14,7 @@ CONFIG_OPENSSL_WITH_TLS13=y
 CONFIG_OPENVPN_openssl_ENABLE_DEF_AUTH=y
 CONFIG_OPENVPN_openssl_ENABLE_FRAGMENT=y
 CONFIG_OPENVPN_openssl_ENABLE_LZ4=y
+CONFIG_OPENVPN_openssl_ENABLE_LZO=y
 CONFIG_OPENVPN_openssl_ENABLE_MULTIHOME=y
 CONFIG_OPENVPN_openssl_ENABLE_PF=y
 CONFIG_OPENVPN_openssl_ENABLE_PORT_SHARE=y
@@ -22,6 +23,7 @@ CONFIG_PACKAGE_bind-dig=y
 CONFIG_PACKAGE_bind-libs=y
 CONFIG_PACKAGE_ca-certificates=y
 CONFIG_PACKAGE_cgi-io=y
+# CONFIG_PACKAGE_dnsmasq is not set
 CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_kmod-crypto-lib-blake2s=y
 CONFIG_PACKAGE_kmod-crypto-lib-chacha20=y
@@ -37,15 +39,23 @@ CONFIG_PACKAGE_kmod-udptunnel4=y
 CONFIG_PACKAGE_kmod-udptunnel6=y
 CONFIG_PACKAGE_kmod-wireguard=y
 CONFIG_PACKAGE_libatomic=y
+CONFIG_PACKAGE_libevent2=y
+CONFIG_PACKAGE_libexpat=y
 CONFIG_PACKAGE_libiwinfo-lua=y
 CONFIG_PACKAGE_liblua=y
 CONFIG_PACKAGE_liblucihttp=y
 CONFIG_PACKAGE_liblucihttp-lua=y
+CONFIG_PACKAGE_liblzo=y
+CONFIG_PACKAGE_libmnl=y
 CONFIG_PACKAGE_libncurses=y
 CONFIG_PACKAGE_libnghttp2=y
 CONFIG_PACKAGE_libopenssl=y
 CONFIG_PACKAGE_librt=y
 CONFIG_PACKAGE_libubus-lua=y
+CONFIG_PACKAGE_libunbound=y
+CONFIG_PACKAGE_libunbound_ipset=y
+CONFIG_PACKAGE_libunbound_libevent=y
+CONFIG_PACKAGE_libunbound_libpthread=y
 CONFIG_PACKAGE_libuv=y
 CONFIG_PACKAGE_lua=y
 CONFIG_PACKAGE_luasocket=y
@@ -53,6 +63,7 @@ CONFIG_PACKAGE_luci=y
 CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-openvpn=y
 CONFIG_PACKAGE_luci-app-opkg=y
+CONFIG_PACKAGE_luci-app-unbound=y
 CONFIG_PACKAGE_luci-app-wireguard=y
 CONFIG_PACKAGE_luci-base=y
 CONFIG_PACKAGE_luci-compat=y
@@ -69,6 +80,9 @@ CONFIG_PACKAGE_luci-proto-ppp=y
 CONFIG_PACKAGE_luci-proto-wireguard=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
 CONFIG_PACKAGE_nano=y
+CONFIG_PACKAGE_odhcpd=y
+# CONFIG_PACKAGE_odhcpd-ipv6only is not set
+CONFIG_PACKAGE_odhcpd_full_ext_cer_id=0
 CONFIG_PACKAGE_openvpn-openssl=y
 CONFIG_PACKAGE_prometheus-node-exporter-lua=y
 CONFIG_PACKAGE_prometheus-node-exporter-lua-nat_traffic=y
@@ -82,6 +96,9 @@ CONFIG_PACKAGE_rpcd-mod-rrdns=y
 CONFIG_PACKAGE_terminfo=y
 CONFIG_PACKAGE_uhttpd=y
 CONFIG_PACKAGE_uhttpd-mod-ubus=y
+CONFIG_PACKAGE_unbound-anchor=y
+CONFIG_PACKAGE_unbound-daemon=y
+CONFIG_PACKAGE_unbound-host=y
 CONFIG_PACKAGE_wireguard-tools=y
 CONFIG_PACKAGE_zlib=y
 # CONFIG_PACKAGE_kmod-crypto-hash is not set
