--- a/conf/v21/aruba-ap303-ap11.conf
+++ b/conf/v21/aruba-ap303-ap11.conf
@@ -17,6 +17,7 @@ CONFIG_OPENSSL_WITH_TLS13=y
 CONFIG_PACKAGE_bind-dig=y
 CONFIG_PACKAGE_bind-libs=y
 CONFIG_PACKAGE_cgi-io=y
+# CONFIG_PACKAGE_dnsmasq is not set
 CONFIG_PACKAGE_findutils-find=y
 CONFIG_PACKAGE_freeradius3=y
 CONFIG_PACKAGE_freeradius3-common=y
@@ -26,9 +27,11 @@ CONFIG_PACKAGE_freeradius3-mod-eap=y
 CONFIG_PACKAGE_freeradius3-mod-eap-mschapv2=y
 CONFIG_PACKAGE_freeradius3-mod-eap-peap=y
 CONFIG_PACKAGE_freeradius3-mod-eap-tls=y
+CONFIG_PACKAGE_freeradius3-mod-files=y
 CONFIG_PACKAGE_freeradius3-mod-mschap=y
 CONFIG_PACKAGE_freeradius3-utils=y
 CONFIG_PACKAGE_grep=y
+CONFIG_PACKAGE_hostapd-openssl=y
 CONFIG_PACKAGE_hostapd-utils=y
 CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_iftop=y
@@ -81,7 +84,6 @@ CONFIG_PACKAGE_luasocket=y
 CONFIG_PACKAGE_luci=y
 CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-opkg=y
-CONFIG_PACKAGE_luci-app-uhttpd=y
 CONFIG_PACKAGE_luci-app-unbound=y
 CONFIG_PACKAGE_luci-app-wireguard=y
 CONFIG_PACKAGE_luci-base=y
@@ -99,8 +101,9 @@ CONFIG_PACKAGE_luci-proto-ppp=y
 CONFIG_PACKAGE_luci-proto-wireguard=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
 CONFIG_PACKAGE_nano=y
-# CONFIG_PACKAGE_odhcp6c is not set
+CONFIG_PACKAGE_odhcpd=y
 # CONFIG_PACKAGE_odhcpd-ipv6only is not set
+CONFIG_PACKAGE_odhcpd_full_ext_cer_id=0
 # CONFIG_PACKAGE_ppp is not set
 CONFIG_PACKAGE_prometheus-node-exporter-lua=y
 CONFIG_PACKAGE_prometheus-node-exporter-lua-hostapd_stations=y
@@ -126,11 +129,11 @@ CONFIG_PACKAGE_unbound-checkconf=y
 CONFIG_PACKAGE_unbound-daemon=y
 CONFIG_PACKAGE_unbound-host=y
 CONFIG_PACKAGE_wireguard-tools=y
-CONFIG_PACKAGE_wpa-supplicant-basic=m
-CONFIG_PACKAGE_wpad=y
-CONFIG_PACKAGE_wpad-basic=m
-CONFIG_PACKAGE_wpad-basic-openssl=m
+CONFIG_PACKAGE_wpa-supplicant=y
+CONFIG_PACKAGE_wpa-supplicant-openssl=m
+CONFIG_PACKAGE_wpad=m
 # CONFIG_PACKAGE_wpad-basic-wolfssl is not set
+CONFIG_PACKAGE_wpad-openssl=m
 CONFIG_PACKAGE_zlib=y
 CONFIG_PCRE_JIT_ENABLED=y
 # CONFIG_WPA_WOLFSSL is not set
