--- a/conf/v21/edgerouter-x-sfp.conf
+++ b/conf/v21/edgerouter-x-sfp.conf
@@ -1,6 +1,9 @@
 CONFIG_TARGET_ramips=y
 CONFIG_TARGET_ramips_mt7621=y
 CONFIG_TARGET_ramips_mt7621_DEVICE_ubnt_edgerouter-x-sfp=y
+CONFIG_DROPBEAR_ECC=y
+CONFIG_DROPBEAR_ECC_FULL=y
+CONFIG_FREERADIUS3_OPENSSL=y
 CONFIG_OPENSSL_ENGINE=y
 CONFIG_OPENSSL_PREFER_CHACHA_OVER_GCM=y
 CONFIG_OPENSSL_WITH_ASM=y
@@ -11,34 +14,46 @@ CONFIG_OPENSSL_WITH_ERROR_MESSAGES=y
 CONFIG_OPENSSL_WITH_PSK=y
 CONFIG_OPENSSL_WITH_SRP=y
 CONFIG_OPENSSL_WITH_TLS13=y
-CONFIG_OPENVPN_openssl_ENABLE_DEF_AUTH=y
-CONFIG_OPENVPN_openssl_ENABLE_FRAGMENT=y
-CONFIG_OPENVPN_openssl_ENABLE_LZ4=y
-CONFIG_OPENVPN_openssl_ENABLE_LZO=y
-CONFIG_OPENVPN_openssl_ENABLE_MULTIHOME=y
-CONFIG_OPENVPN_openssl_ENABLE_PF=y
-CONFIG_OPENVPN_openssl_ENABLE_PORT_SHARE=y
-CONFIG_OPENVPN_openssl_ENABLE_SMALL=y
 CONFIG_PACKAGE_bind-dig=y
 CONFIG_PACKAGE_bind-libs=y
-CONFIG_PACKAGE_ca-certificates=y
 CONFIG_PACKAGE_cgi-io=y
 # CONFIG_PACKAGE_dnsmasq is not set
+CONFIG_PACKAGE_eoip=y
+CONFIG_PACKAGE_findutils-find=y
+CONFIG_PACKAGE_freeradius3=y
+CONFIG_PACKAGE_freeradius3-common=y
+CONFIG_PACKAGE_freeradius3-mod-attr-filter=y
+CONFIG_PACKAGE_freeradius3-mod-detail=y
+CONFIG_PACKAGE_freeradius3-mod-eap=y
+CONFIG_PACKAGE_freeradius3-mod-eap-mschapv2=y
+CONFIG_PACKAGE_freeradius3-mod-eap-peap=y
+CONFIG_PACKAGE_freeradius3-mod-eap-tls=y
+CONFIG_PACKAGE_freeradius3-mod-files=y
+CONFIG_PACKAGE_freeradius3-mod-mschap=y
+CONFIG_PACKAGE_freeradius3-utils=y
+CONFIG_PACKAGE_grep=y
 CONFIG_PACKAGE_htop=y
+CONFIG_PACKAGE_iftop=y
+CONFIG_PACKAGE_iptables-mod-nflog=y
+CONFIG_PACKAGE_iptables-mod-ulog=y
 CONFIG_PACKAGE_kmod-crypto-lib-blake2s=y
 CONFIG_PACKAGE_kmod-crypto-lib-chacha20=y
 CONFIG_PACKAGE_kmod-crypto-lib-chacha20poly1305=y
 CONFIG_PACKAGE_kmod-crypto-lib-curve25519=y
 CONFIG_PACKAGE_kmod-crypto-lib-poly1305=y
 CONFIG_PACKAGE_kmod-ipt-nflog=y
-CONFIG_PACKAGE_kmod-libphy=y
+CONFIG_PACKAGE_kmod-ipt-raw=y
+CONFIG_PACKAGE_kmod-ipt-ulog=y
 CONFIG_PACKAGE_kmod-nfnetlink=y
 CONFIG_PACKAGE_kmod-nfnetlink-log=y
+# CONFIG_PACKAGE_kmod-ppp is not set
 CONFIG_PACKAGE_kmod-tun=y
 CONFIG_PACKAGE_kmod-udptunnel4=y
 CONFIG_PACKAGE_kmod-udptunnel6=y
 CONFIG_PACKAGE_kmod-wireguard=y
 CONFIG_PACKAGE_libatomic=y
+CONFIG_PACKAGE_libattr=y
+CONFIG_PACKAGE_libcap=y
 CONFIG_PACKAGE_libevent2=y
 CONFIG_PACKAGE_libexpat=y
 CONFIG_PACKAGE_libiwinfo-lua=y
@@ -48,9 +63,15 @@ CONFIG_PACKAGE_liblucihttp-lua=y
 CONFIG_PACKAGE_liblzo=y
 CONFIG_PACKAGE_libmnl=y
 CONFIG_PACKAGE_libncurses=y
+CONFIG_PACKAGE_libnetfilter-log=y
+CONFIG_PACKAGE_libnfnetlink=y
 CONFIG_PACKAGE_libnghttp2=y
 CONFIG_PACKAGE_libopenssl=y
+CONFIG_PACKAGE_libpcap=y
+CONFIG_PACKAGE_libpcre=y
+CONFIG_PACKAGE_libreadline=y
 CONFIG_PACKAGE_librt=y
+CONFIG_PACKAGE_libtalloc=y
 CONFIG_PACKAGE_libubus-lua=y
 CONFIG_PACKAGE_libunbound=y
 CONFIG_PACKAGE_libunbound_ipset=y
@@ -58,10 +79,11 @@ CONFIG_PACKAGE_libunbound_libevent=y
 CONFIG_PACKAGE_libunbound_libpthread=y
 CONFIG_PACKAGE_libuv=y
 CONFIG_PACKAGE_lua=y
+CONFIG_PACKAGE_lua-bit32=y
+CONFIG_PACKAGE_luabitop=y
 CONFIG_PACKAGE_luasocket=y
 CONFIG_PACKAGE_luci=y
 CONFIG_PACKAGE_luci-app-firewall=y
-CONFIG_PACKAGE_luci-app-openvpn=y
 CONFIG_PACKAGE_luci-app-opkg=y
 CONFIG_PACKAGE_luci-app-unbound=y
 CONFIG_PACKAGE_luci-app-wireguard=y
@@ -83,7 +105,7 @@ CONFIG_PACKAGE_nano=y
 CONFIG_PACKAGE_odhcpd=y
 # CONFIG_PACKAGE_odhcpd-ipv6only is not set
 CONFIG_PACKAGE_odhcpd_full_ext_cer_id=0
-CONFIG_PACKAGE_openvpn-openssl=y
+# CONFIG_PACKAGE_ppp is not set
 CONFIG_PACKAGE_prometheus-node-exporter-lua=y
 CONFIG_PACKAGE_prometheus-node-exporter-lua-nat_traffic=y
 CONFIG_PACKAGE_prometheus-node-exporter-lua-netstat=y
@@ -94,12 +116,20 @@ CONFIG_PACKAGE_rpcd-mod-iwinfo=y
 CONFIG_PACKAGE_rpcd-mod-luci=y
 CONFIG_PACKAGE_rpcd-mod-rrdns=y
 CONFIG_PACKAGE_terminfo=y
+CONFIG_PACKAGE_tree=y
 CONFIG_PACKAGE_uhttpd=y
 CONFIG_PACKAGE_uhttpd-mod-ubus=y
+CONFIG_PACKAGE_ulogd=y
+CONFIG_PACKAGE_ulogd-mod-extra=y
+CONFIG_PACKAGE_ulogd-mod-nflog=y
+CONFIG_PACKAGE_ulogd-mod-syslog=y
 CONFIG_PACKAGE_unbound-anchor=y
+CONFIG_PACKAGE_unbound-checkconf=y
 CONFIG_PACKAGE_unbound-daemon=y
 CONFIG_PACKAGE_unbound-host=y
 CONFIG_PACKAGE_wireguard-tools=y
 CONFIG_PACKAGE_zlib=y
+CONFIG_PCRE_JIT_ENABLED=y
 # CONFIG_PACKAGE_kmod-crypto-hash is not set
 # CONFIG_PACKAGE_kmod-crypto-kpp is not set
+CONFIG_PACKAGE_kmod-lib-crc-ccitt=y
