--- a/conf/v21/edgerouter-x-sfp.conf
+++ b/conf/v21/edgerouter-x-sfp.conf
@@ -25,9 +25,11 @@ CONFIG_PACKAGE_freeradius3-common=y
 CONFIG_PACKAGE_freeradius3-mod-attr-filter=y
 CONFIG_PACKAGE_freeradius3-mod-detail=y
 CONFIG_PACKAGE_freeradius3-mod-eap=y
+CONFIG_PACKAGE_freeradius3-mod-eap-md5=y
 CONFIG_PACKAGE_freeradius3-mod-eap-mschapv2=y
 CONFIG_PACKAGE_freeradius3-mod-eap-peap=y
 CONFIG_PACKAGE_freeradius3-mod-eap-tls=y
+CONFIG_PACKAGE_freeradius3-mod-eap-ttls=y
 CONFIG_PACKAGE_freeradius3-mod-files=y
 CONFIG_PACKAGE_freeradius3-mod-mschap=y
 CONFIG_PACKAGE_freeradius3-utils=y
