--- a/conf/v21/edgerouter-x-sfp.conf
+++ b/conf/v21/edgerouter-x-sfp.conf
@@ -22,16 +22,30 @@ CONFIG_PACKAGE_eoip=y
 CONFIG_PACKAGE_findutils-find=y
 CONFIG_PACKAGE_freeradius3=y
 CONFIG_PACKAGE_freeradius3-common=y
+CONFIG_PACKAGE_freeradius3-mod-always=y
 CONFIG_PACKAGE_freeradius3-mod-attr-filter=y
+CONFIG_PACKAGE_freeradius3-mod-chap=y
 CONFIG_PACKAGE_freeradius3-mod-detail=y
+CONFIG_PACKAGE_freeradius3-mod-digest=y
 CONFIG_PACKAGE_freeradius3-mod-eap=y
+CONFIG_PACKAGE_freeradius3-mod-eap-gtc=y
+CONFIG_PACKAGE_freeradius3-mod-eap-leap=y
 CONFIG_PACKAGE_freeradius3-mod-eap-md5=y
 CONFIG_PACKAGE_freeradius3-mod-eap-mschapv2=y
 CONFIG_PACKAGE_freeradius3-mod-eap-peap=y
 CONFIG_PACKAGE_freeradius3-mod-eap-tls=y
 CONFIG_PACKAGE_freeradius3-mod-eap-ttls=y
+CONFIG_PACKAGE_freeradius3-mod-exec=y
+CONFIG_PACKAGE_freeradius3-mod-expiration=y
+CONFIG_PACKAGE_freeradius3-mod-expr=y
 CONFIG_PACKAGE_freeradius3-mod-files=y
+CONFIG_PACKAGE_freeradius3-mod-logintime=y
 CONFIG_PACKAGE_freeradius3-mod-mschap=y
+CONFIG_PACKAGE_freeradius3-mod-pap=y
+CONFIG_PACKAGE_freeradius3-mod-preprocess=y
+CONFIG_PACKAGE_freeradius3-mod-radutmp=y
+CONFIG_PACKAGE_freeradius3-mod-realm=y
+CONFIG_PACKAGE_freeradius3-mod-unix=y
 CONFIG_PACKAGE_freeradius3-utils=y
 CONFIG_PACKAGE_grep=y
 CONFIG_PACKAGE_htop=y
@@ -71,6 +85,7 @@ CONFIG_PACKAGE_libnghttp2=y
 CONFIG_PACKAGE_libopenssl=y
 CONFIG_PACKAGE_libpcap=y
 CONFIG_PACKAGE_libpcre=y
+CONFIG_PACKAGE_libpopt=y
 CONFIG_PACKAGE_libreadline=y
 CONFIG_PACKAGE_librt=y
 CONFIG_PACKAGE_libtalloc=y
@@ -117,6 +132,7 @@ CONFIG_PACKAGE_rpcd-mod-file=y
 CONFIG_PACKAGE_rpcd-mod-iwinfo=y
 CONFIG_PACKAGE_rpcd-mod-luci=y
 CONFIG_PACKAGE_rpcd-mod-rrdns=y
+CONFIG_PACKAGE_rsync=y
 CONFIG_PACKAGE_terminfo=y
 CONFIG_PACKAGE_tree=y
 CONFIG_PACKAGE_uhttpd=y
